# streamline-python-sdk

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
benchmarks/: benchmark_client.py  conftest.py
examples/: README.md  basic_usage.py
streamline_embedded/: Cargo.toml  README.md
streamline_embedded/src/: lib.rs
streamline_sdk/: __init__.py  admin.py  client.py  consumer.py  exceptions.py  producer.py  retry.py  serializers.py  telemetry.py  types.py
testcontainers/: README.md  pyproject.toml
testcontainers/streamline_testcontainers/: __init__.py  container.py
testcontainers/tests/: test_container.py
tests/: test_admin.py  test_client.py  test_conformance.py  test_consumer.py  test_exceptions.py  test_producer.py  test_retry.py  test_types.py
